vlib/v/checker/tests/strict_map_index_err.vv
@[strict_map_index]
module main

fn main() {
	m := {
		'abc': 'xyz'
	}
	_ = m['missing']
}
